// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    master
    <div
      className="badge spacer-left"
    >
      branches.main_branch
    </div>
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  />
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-rename"
        onClick={[Function]}
      >
        branches.rename
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`renders pull request 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      className="little-spacer-right big-spacer-left"
    />
    1001 – Foo Bar feature
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[Function]}
      >
        branches.pull_request.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`renders short-living branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature/foo",
          "type": "SHORT",
        }
      }
      className="little-spacer-right big-spacer-left"
    />
    feature/foo
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature/foo",
          "type": "SHORT",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[Function]}
      >
        branches.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
